--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "ulid": "2.3.0"
   },
   "devDependencies": {
+    "@types/aws-lambda": "8.10.72",
+    "@types/chance": "1.1.1",
+    "@types/jest": "26.0.21",
+    "@types/node": "14.14.35",
     "axios": "0.21.1",
     "jest": "26.6.3",
     "lodash": "4.17.21",
@@ -18,6 +22,9 @@
     "serverless-esbuild": "1.9.0",
     "serverless-export-env": "1.4.1",
     "serverless-iam-roles-per-function": "3.1.0",
-    "serverless-manifest-plugin": "1.0.7"
+    "serverless-manifest-plugin": "1.0.7",
+    "ts-jest": "26.5.4",
+    "ts-node": "9.1.1",
+    "typescript": "3.9.9"
   }
 }
