--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "private": true,
   "scripts": {
+    "codegen": "graphql-codegen",
+    "format:code": "prettier --write './**/*.{js,ts,yaml,graphql}' '!(__codegen__)'",
+    "format:package-json": "prettier-package-json --write",
     "sls:deploy": "serverless deploy --verbose",
     "sls:export-env": "serverless export-env && serverless manifest",
-    "test:e2e": "jest --verbose ./__tests__/cases/e2e",
-    "codegen": "graphql-codegen"
+    "test:e2e": "jest --verbose ./__tests__/cases/e2e"
   },
   "dependencies": {
     "chance": "1.1.7",
@@ -20,14 +22,22 @@
     "axios": "0.21.1",
     "jest": "26.6.3",
     "lodash": "4.17.21",
+    "prettier": "2.2.1",
+    "prettier-package-json": "2.1.3",
     "serverless": "2.30.3",
     "serverless-appsync-plugin": "1.8.0",
     "serverless-esbuild": "1.9.0",
-    "serverless-export-env": "1.4.1",
+    "serverless-export-env": "github:arabold/serverless-export-env",
     "serverless-iam-roles-per-function": "3.1.0",
     "serverless-manifest-plugin": "1.0.7",
     "ts-jest": "26.5.4",
     "ts-node": "9.1.1",
     "typescript": "3.9.9"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
 }
